Upgrade to Java 25 and bump dependencies